# ansible-role-user-group

./: .ansible-lint  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
defaults/: main.yaml
tasks/: group_configure.yaml  group_defaults.yaml  group_remove.yaml  main.yaml  user_configure.yaml  user_defaults.yaml  user_remove.yaml
